[build-system]
requires = ["setuptools>=61.0"]

[tool.setuptools]
packages = [
    "smbcrawler"
]

[tool.setuptools.dynamic]
version = {attr = "smbcrawler.__version__"}

[project]
name = 'smbcrawler'
dynamic = ["version"]
authors = [
    { name='Adrian Vollmer',email='adrian.vollmer@syss.de' },
    { name='Aaron Bishop',email='abishop@linux.com' },
]
description = 'Search SMB shares for interesting files'
readme = 'README.md'
requires-python = '>=3.5'
dependencies = [
    'impacket>=0.9.20',
    'python-libnmap',
    'lxml',
    'PyPDF2',
    'python-docx',
    'python-magic',
]
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]

[project.urls]
"Homepage" = "https://github.com/irbishop/smbcrawler"

[project.scripts]
smbcrawler = "smbcrawler.__main__:main"
